# tesseract-wasmer

./: Cargo.toml  tesseract-worker.js  unimplemented_functions.txt  worker2.js
src/: main.rs
