[package]
name = "tesseractwasmer"
version = "0.1.0"
edition = "2021"

[dependencies.wasmer]
git = "https://github.com/wasmerio/wasmer"
rev = "05d74ea3fbabc0adcb0098d4896a623cc5a34ed5"

[dependencies.wasmer_wasi]
git = "https://github.com/wasmerio/wasmer"
rev = "05d74ea3fbabc0adcb0098d4896a623cc5a34ed5"
package = "wasmer-wasi"

[dependencies.wasmer_vfs]
git = "https://github.com/wasmerio/wasmer"
rev = "05d74ea3fbabc0adcb0098d4896a623cc5a34ed5"
package = "wasmer-vfs"